# peacepie

./: .gitignore  LICENSE  README.md  log_conf.py  main.py  pyproject.toml  requirements.txt  routine_params.py  setup.old  setup.py
.github/workflows/: publish.yml
config/: app_starter_heavy_load.py  app_starter_simple_actor_recreate_testing.py  app_starter_simple_cache_testing.py  app_starter_simple_django_dashboard.py  app_starter_simple_fastapi_dashboard.py  app_starter_simple_installer.py  app_starter_simple_navi_testing.py  app_starter_simple_package_testing.py  app_starter_simple_telegram_bot.py  app_starter_simple_testing.py  app_starter_simple_web_face.py  log.cfg
config/instance_01/: app_starter.py  app_starter_cpu_heavy_load.py  app_starter_example.py  app_starter_heavy_load.py  app_starter_navi_test.py  app_starter_simple_actor_move_testing.py  app_starter_simple_actor_recreate_testing.py  app_starter_simple_django_dashboard.py  app_starter_simple_docker_manager.py  app_starter_simple_egts_testing.py  app_starter_simple_navi_testing.py  app_starter_simple_networking.py  app_starter_simple_package_testing.py  app_starter_simple_telegram_bot.py  app_starter_simple_telegram_dashboard.py  app_starter_simple_test.py  app_starter_simple_tester.py  app_starter_simple_web_face.py  log.cfg  peacepie.cfg  peacepie_installer.cfg  peacepie_service.cfg
config/instance_02/: log.cfg  peacepie.cfg
docs/: actors.md  commands.txt  configuration.md  distributed.md  index.md  installation.md  messages.md  peacepie.odt  python_install.txt  starter.md
notes/: commands.txt  metadata.txt  packet_manager.odt  peacepie.odt  publish_in_pypi.odt  restict.txt  roles_prompt.txt  users_prompt.txt  volatile_code.odt
peacepie/: __init__.py  adaptor.py  log_conf.py  loglistener.py  msg_factory.py  multimanager.py  params.py  peace_system.py  routine_params.py
peacepie/assist/: dir_operations.py  json_util.py  log_util.py  misc.py  rsa_util.py  serialization.py  terminal_util.py  timer.py  version.py
peacepie/control/: admin.py  connector.py  delivery.py  head_prime_admin.py  internal_starter.py  package_loader.py  prime_admin.py  process_admin.py  safe_admin.py  series_admin.py  (+3 more)
peacepie_service/: app_starter.py  compile.sh  log.cfg  peacepie.cfg  peacepie.service  peacepie_service.pyz
plugins/peacepie_example/0.0.9/: pyproject.toml
plugins/peacepie_example/0.0.9/peacepie_example/: circle_starter.py  hello_world.py  html_addons.py  initiator.py  iterating_hello_world.py  queries.txt  web_face.py
plugins/peacepie_example/0.1.0/: pyproject.toml
plugins/peacepie_example/0.1.0/peacepie_example/: __init__.py  circle_dancer.py  circle_starter.py  html_addons.py  web_face.py
plugins/peacepie_example/0.2.0/: pyproject.toml
plugins/peacepie_example/0.2.0/peacepie_example/: circle_starter.py  iterating_hello_world.py  web_face.py
plugins/peacepie_example/0.2.0/src/peacepie_example/: circle_dancer.py  hello_world.py  initiator.py  web_face.py
plugins/simple_actor_recreate_auxiliary/0.0.1/: pyproject.toml
plugins/simple_actor_recreate_auxiliary/0.0.1/src/simple_actor_recreate_auxiliary/: __init__.py  consumer.py  generator.py
plugins/simple_fastapi_dashboard/0.0.1/: pyproject.toml
plugins/simple_fastapi_dashboard/0.0.1/src/simple_fastapi_dashboard/: __init__.py  fastapi_actor.py  fastapi_server.py  log.json  query.txt  simple_fastapi_actor.py  zmq_client.py  zmq_server.py
plugins/simple_fastapi_dashboard/0.0.1/src/simple_fastapi_dashboard/api/: actors.py  emulator.py  files.py  html_addons.py  roles.py  users.py
plugins/simple_fastapi_dashboard/0.0.1/src/simple_fastapi_dashboard/core/: zmq_client.py
plugins/simple_fastapi_dashboard/0.0.1/src/simple_fastapi_dashboard/resources/templates/: dashboard.html  login.html
plugins/simple_fastapi_dashboard/0.0.1/src/simple_fastapi_dashboard/templates/: base.html  index.html  login.html  roles.html  users_vue.html  users_vue.old
plugins/simple_fastapi_dashboard/0.0.1/src/simple_fastapi_dashboard/templates/static/: styles.css
plugins/simple_sqlite_account_manager/0.0.1/: pyproject.toml
plugins/simple_sqlite_account_manager/0.0.1/src/simple_sqlite_account_manager/: __init__.py  account_manager.py  database_manager.py  models.py
plugins/simple_web_face/0.0.1/: pyproject.toml
plugins/simple_web_face/0.0.1/simple_web_face/: __init__.py  client_link.py  html_styles.py  http_server.py  stub.py  web_face.py  web_starter.py
plugins/simple_web_face/0.0.1/src/simple_web_face/: __init__.py  dummy.py  file_browser_handler.py  web_face.py
src/: README.md  main.py  pyproject.toml
src/config/: app_starter_example.py
src/peacepie/: __init__.py  adaptor.py  log_conf.py  loglistener.py  msg_factory.py  params.py  peace_system.py
src/peacepie/assist/: auxiliaries.py  dependencies.py  dir_operations.py  dir_opers.py  exceptions.py  json_util.py  log_util.py  misc.py  pack_installer.py  pack_opers.py  pack_resolver.py  pack_tree.py  repo_reader.py  rsa_util.py  serialization.py  terminal_util.py  thread_util.py  timer.py  version.py
src/peacepie/control/: admin.py  connector.py  delivery.py  head_prime_admin.py  internal_starter.py  package_loader.py  package_loader_old.py  prime_admin.py  process_admin.py  safe_admin.py  selective_package_loader.py  series_admin.py  spy.py
src/peacepie/control/accounts/: account_admin.py  db_admin.py  password_hasher.py  script.sql
src/peacepie/control/actors/: actor_admin.py  actor_agent.py  actor_creator.py  actor_loader.py  actor_mover.py  actor_recreator.py  actor_seeker.py  class_extractor.py  package_admin.py
src/peacepie/control/inter/: inter_server.py
src/peacepie/control/intra/: intra_client.py  intra_link.py  intra_server.py
src/peacepie/resources/: repo_cache.sql  script.sql
src/peacepie/resources/config/: app_starter_example.py  app_starter_init.py  peacepie.cfg
tests/: test_simple_actor_move_testing.py  test_simple_actor_recreate_testing.py  test_simple_cache_testing.py  test_simple_navi_testing.py  test_simple_tester.py  test_simple_testing.py  test_simple_web_face.py
(+247 files in other folders)
