[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "peacepie"
version = "0.1.2"
description = "Простая система акторов"
authors = [{ name = "Владимир Молодцов", email = "vmol@mail.ru" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ['ujson~=5.10.0']

[tool.setuptools.packages.find]
where = ["."]
include = ["peacepie*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
peacepie = ["resources/**/*"]