[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "peacepie"
version = "0.2.3"
description = "Простая система акторов"
authors = [{ name = "Владимир Молодцов", email = "vmol@mail.ru" }]
readme = "README.md"
license-files = ["LICENSE"]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["peacepie*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
peacepie = ["resources/**/*"]