[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "peacepie"
version = "0.2.6"
description = "Simple actor system"
authors = [{ name = "Vladimir Molodtsov", email = "vmol@mail.ru" }]
readme = "README.md"
license-files = ["LICENSE"]
dependencies = [
    "packaging",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["peacepie*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
peacepie = ["resources/**/*"]