[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'peacepie_example'
version = '0.1.0'
description = 'Примеры для пакета "peacepie"'
license = {text = "MIT"}
authors = [{name = 'Владимир Молодцов', email = 'vmol@mail.ru'},]
dependencies = [
        'aiohttp',
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
peacepie_example = ["resources/**/*"]