[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'peacepie_example'
version = '0.2.0'
description = 'Примеры для пакета "peacepie"'
authors = [{name = 'Владимир Молодцов', email = 'vmol@mail.ru'},]
dependencies = [
        'aiohttp',
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
peacepie_example = ["resources/**/*"]