[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_fastapi_dashboard"
version = "0.0.1"
authors = [
    {name = 'Владимир Молодцов', email = 'vmol@mail.ru'},
]
description = "Simple management console"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
]

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["resources/*", "resources/**/*"]