[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_sqlite"
version = "0.0.9"
authors = [
    {name = 'Vladimir Molodtsov', email = 'vmol@mail.ru'},
]
description = "Simple sqlite database"
keywords = ["peacepie"]
dependencies = [
    "sqlalchemy",
    "bcrypt",
]

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["resources/*", "resources/**/*"]