[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[tool.setuptools.package-data]
"simple_web_face.templates" = ["*.html"]

[project]
name = 'simple_web_face'
version = '0.0.1'
authors = [
    {name = 'Vladimir Molodtsov', email = 'vmol@mail.ru'},
]
dependencies = [
        'aiohttp',
]