[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_web_face"
version = "0.0.3"
authors = [
    {name = 'Владимир Молодцов', email = 'vmol@mail.ru'},
]
description = "Simple management console"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9.0,<3.13",
]

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["resources/*", "resources/**/*"]