[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_web_face"
version = "0.0.6"
authors = [
    {name = 'Vladimir Molodtsov', email = 'vmol@mail.ru'},
]
description = "Simple management console"
dependencies = [
    "aiohttp",
]

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["resources/*", "resources/**/*"]